--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,46 @@
+# server
+spring.application.name=todo-list
+server.servlet.context-path=/todo-list/api/v1
+server.port=8080
 
+# Database configuration
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:todolist
+#spring.datasource.url=jdbc:h2:mem:todolist;TRACE_LEVEL_FILE=2;TRACE_LEVEL_SYSTEM_OUT=2;
+spring.datasource.username=sa
+spring.datasource.password=
+
+# h2 console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+#OAUTH
+oauth.resourceId=todoResource
+oauth.client.name=myappname123@
+oauth.client.secret=myappsecret123@
+
+#================================================
+# Actuator
+#================================================
+# INFO ENDPOINT CONFIGURATION
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
+
+# SHUTDOWN ENDPOINT (ShutdownEndpoint)
+management.endpoint.shutdown.enabled=true
+
+# HEALTH ENDPOINT
+management.endpoint.health.show-details=always
+
+# ENDPOINTS WEB CONFIGURATION
+management.endpoints.web.exposure.include=*
